--- a/style.css
+++ b/style.css
@@ -2,7 +2,16 @@
     width: 2rem;
     height: 2rem;
 }
-size {
-    width: 1rem;
-    height: 1rem;
+.size {
+    width: 20rem;
+    height: 10rem;
+}
+.bleu {
+    background-color: #4A588A;
+}
+.footer {
+   font-size: 0.8rem;
+}
+.navbar-light .navbar-toggler-icon {
+background: url(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 280, 280, 280.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"));
 }
