--- a/style.css
+++ b/style.css
@@ -168,3 +168,29 @@ a {
         opacity: 1;
     }
 }
+
+
+ .video {
+     width: 100%;
+     height: 0;
+     padding-bottom: 56.25%;
+     overflow: hidden;
+     position: relative;
+ }
+
+ .video iframe{
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     top: 0; left: 0;
+ }
+
+ .affiche{
+     border-radius: 1.25rem;
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.2);
+   
+     
+ }
+
+
+ 
